# pathos

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/android/: mod.rs  user.rs
src/ios/: mod.rs  system.rs  user.rs
src/iri/: mod.rs
src/linux/: system.rs  user.rs
src/macos/: mod.rs  system.rs  user.rs
src/path/: absolute.rs  mod.rs
src/windows/: mod.rs  system.rs  user.rs
src/xdg/: mod.rs  user.rs
