[package]
name = "pathos"
description = "A natural API for finding OS-specific user or system directories, regardless of the operating system."
version = "0.2.0-pre.1"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/pathos"

[dependencies]
directories = { package = "directories-next", version = "1.0.1" }
iref = { package = "iref__bbqsrc", version = "1.1.5" }
thiserror = "1.0.20"
once_cell = "1.4.1"
log = "0.4.11"
libc = "0.2.76"
home = "0.5.3"
os_str_bytes = "2.3.2"
percent-encoding = "2.1.0"
eieio = "1.0.0"

[dev-dependencies]
whoami = "0.9.0"

[features]
ios = []
android = []
macos = []
windows = []
linux = []
xdg = []
