[package]
name = "pathos"
description = "A natural API for handling OS-specific user or system directories, including iOS and Android."
version = "0.3.0-pre.6"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/pathos"
categories = ["filesystem", "os", "os::linux-apis", "os::macos-apis", "os::windows-apis"]
keywords = ["paths", "dirs", "folders", "xdg"]

[dependencies]
iref = "1.4.3"
thiserror = "1.0.21"
once_cell = "1.4.1"
log = "0.4.11"
libc = "0.2.79"
os_str_bytes = "2.3.2"
percent-encoding = "2.1.0"
eieio = "1.0.0"

[target.'cfg(windows)'.dependencies]
windirs = "1"

[target.'cfg(target_vendor = "apple")'.dependencies]
fruity = { package = "fruity__bbqsrc", version = "0.2.0", features = ["foundation"] }

[dev-dependencies]
whoami = "1.1.0"

[features]
ios = []
android = []
macos = []
windows = []
linux = []
xdg = []

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-ios",
    "aarch64-linux-android",
]
